--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 ### 虎科大機械設計工程系
 
 <small>
-Created by [KMOLab](http://chiamingyen.github.io/kmolab/blog/)
+Created by [40423205](https://40423205.github.io/2017springcd_hw/blog/)
 </small>
 
 [協同產品設計實習課程網誌](blog/index.html)
@@ -104,7 +104,7 @@ Created by [KMOLab](http://chiamingyen.github.io/kmolab/blog/)
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-*一.筆記
+一.筆記
 
 1.tiny2017 - with_pip\data\stunnel\config的stunnel.conf檔案
 
@@ -146,8 +146,7 @@ Created by [KMOLab](http://chiamingyen.github.io/kmolab/blog/)
 <!-- 請注意, @others 不可以內縮 -->
 二.solvespace組立四連桿
 
-1.元件加上軸心
-<iframe src="https://vimeo.com/210118780" width="640" height="340" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/210118780" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
 </section>
 
@@ -169,13 +168,11 @@ Created by [KMOLab](http://chiamingyen.github.io/kmolab/blog/)
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-1.了解使用HYPERWORKS
+<p align="left">
+1. 完成看影片打出英文稿</p>
 
-2.更改Start的foddil路徑
-
-3.用solvespace做出 30-50-608的四連桿機構，並組立轉出囗STL檔，再用IMPORT轉入V-REP
-
-4.用ONSHAP再次完成第3點的步驟，畫出並組立四連桿機構，以STL檔轉出，再傳入V-REP做測試
+<p align="left">
+2. 練習在近端建立 fossil</p>
     </script>
 </section>
 
@@ -236,11 +233,7 @@ https://mde2a2.kmol.info/cdbg5/home
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-一.筆記
-
-1.Fossil SCM與Stunnel啟動整合
-
-2.Onshape匯出 onebar並在V-rep加入馬達
+#一.Fossil SCM與Stunnel啟動整合
     </script>
 </section>
 
@@ -250,8 +243,9 @@ https://mde2a2.kmol.info/cdbg5/home
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-二.將單連桿轉入v-rep進行馬達運動模擬
+#二.將單連桿轉入v-rep進行馬達運動模擬
 
+<iframe src="https://player.vimeo.com/video/211506622" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
 </section>
 
@@ -273,11 +267,13 @@ https://mde2a2.kmol.info/cdbg5/home
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-1.用ONSHAPE及SOLVESPACE繪製出ONBAR 及 FOURAR
+<p align="left">
+1. 在 Onshape 繪製出 Onebar 及 Fourbar</p>
 
-2.將Forbar匯入 V-rep加入馬達
+<p align="left">
+2. 將 Fourbar 匯入 V-rep </p>
 
-3.將上述四連桿機構做出運動軌跡，是否正確，並在網頁上執行運動軌跡
+<iframe src="https://player.vimeo.com/video/212773213" width="640" height="325" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
 </section>
 
@@ -316,8 +312,8 @@ https://mde2a2.kmol.info/cdbg5/home
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
 ##8link組裝
+
 <iframe src="https://player.vimeo.com/video/213701995" width="640" height="359" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/213701995">2017-04-18_8link (SolveSpace)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </script>
 </section>
 
@@ -380,7 +376,6 @@ https://mde2a2.kmol.info/cdbg5/home
 
 <p>Length=50 的 T 點軌跡圖
 <iframe src="https://player.vimeo.com/video/213777378" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/213777378">2017-04-19_軌跡圖(midterm1)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </script>
 </section>
 
@@ -417,7 +412,6 @@ https://mde2a2.kmol.info/cdbg5/home
 
 <p>四連桿四足行走機構
 <iframe src="https://player.vimeo.com/video/214869893" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<p><a href="https://vimeo.com/214869893">2017-04-26_四連桿四足行走機構(動畫)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </script>
 </section>
 
