update slides all

--- a/index.html
+++ b/index.html
@@ -194,24 +194,15 @@ Created by [40423205](https://40423205.github.io/2017springcd_hw/blog/)
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-
-
-1.建立個小組協同主機     
-   2017Springcd _bg5
-
+<p align="left">
+1.建立個小組協同主機 2017Springcd _bg5</p>
 https://mde2a2.kmol.info/cdbg5/home
 
-    </script>
-</section>
+<p align="left">
+2. 繪製單桿機構</p>
 
+<iframe src="https://player.vimeo.com/video/211343657" width="640" height="306" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-
-						
-<section data-markdown>
-    <script type="text/template">
-<!-- 請注意, @others 不可以內縮 -->
-
-#二.HYPERWORKS 翻譯 
     </script>
 </section>
 
@@ -233,7 +224,7 @@ https://mde2a2.kmol.info/cdbg5/home
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-#一.Fossil SCM與Stunnel啟動整合
+##一.Fossil SCM與Stunnel啟動整合
     </script>
 </section>
 
@@ -243,7 +234,7 @@ https://mde2a2.kmol.info/cdbg5/home
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-#二.將單連桿轉入v-rep進行馬達運動模擬
+###二.將單連桿轉入v-rep進行馬達運動模擬
 
 <iframe src="https://player.vimeo.com/video/211506622" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </script>
