--- a/index.html
+++ b/index.html
@@ -451,8 +451,16 @@ https://mde2a2.kmol.info/cdbg5/home
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
 # Week 12
+    </script>
+</section>
 
-###繪製漸開線齒輪
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+#繪製漸開線齒輪
     </script>
 </section>
 
